# TestJenkins

./: CMakeLists.txt  CMakeSettings.json  HelloWorld.py  Jenkinsfile  requirements.txt
include/: api.h
src/: main.cpp
src/config/: setup.ini
thirdPartyLib/: CMakeLists.txt
thirdPartyLib/includeLib/: functions.h
thirdPartyLib/src/: main.cpp
